@@ -1,3 +1,8 @@
+2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-05-14
+	* shared timeout between waiting for STOP event and stopping framework
+
 2012-06-20 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V02-05-13
